# Musical-Note-Recognition-CNN

./: README.md  model.py  pyproject.toml
