[tool.poetry]
name = "musical-note-recognition-cnn-main"
version = "0.1.0"
description = ""
authors = ["Rambod Azimi <59399542+rambodazimi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
