[tool.poetry]
name = "musical-note-recognition-cnn-main"
version = "0.1.0"
description = ""
authors = ["Rambod Azimi <59399542+rambodazimi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.0"
Pillow = "^8.2.0"
numpy = "^1.21.0"
tkinter = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
